예외처리 추가 리팩토링